// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a table with selectable rows 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -101,11 +101,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Not Selected
+             Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -157,11 +157,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Not Selected
+             Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -213,11 +213,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Not Selected
+             Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -269,11 +269,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Not Selected
+             Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -325,11 +325,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Not Selected
+             Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -381,11 +381,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Not Selected
+             Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -418,15 +418,22 @@
          </td>
        </tr>
      </tbody>
    </table>
    <p>
-     Selected Rows: 0
+     Selected Rows: 6
    </p>
    <pre>
      <code>
        {
-   "selectedRows": []
+   "selectedRows": [
+     "0",
+     "1",
+     "2",
+     "2.0",
+     "2.1",
+     "3"
+   ]
  }
      </code>
    </pre>
  </DocumentFragment>
`;

exports[`renders a table with selectable rows 2`] = `
Snapshot Diff:
- First value
+ Second value

@@ -101,11 +101,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Selected
+             Not Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -157,11 +157,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Selected
+             Not Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -213,11 +213,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Selected
+             Not Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -269,11 +269,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Selected
+             Not Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -325,11 +325,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Selected
+             Not Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -381,11 +381,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Selected
+             Not Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -418,22 +418,15 @@
          </td>
        </tr>
      </tbody>
    </table>
    <p>
-     Selected Rows: 6
+     Selected Rows: 0
    </p>
    <pre>
      <code>
        {
-   "selectedRows": [
-     "0",
-     "1",
-     "2",
-     "2.0",
-     "2.1",
-     "3"
-   ]
+   "selectedRows": []
  }
      </code>
    </pre>
  </DocumentFragment>
`;

exports[`renders a table with selectable rows 3`] = `
Snapshot Diff:
- First value
+ Second value

@@ -101,11 +101,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Not Selected
+             Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -213,11 +213,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Not Selected
+             Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -269,11 +269,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Not Selected
+             Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -325,11 +325,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Not Selected
+             Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -418,15 +418,20 @@
          </td>
        </tr>
      </tbody>
    </table>
    <p>
-     Selected Rows: 0
+     Selected Rows: 4
    </p>
    <pre>
      <code>
        {
-   "selectedRows": []
+   "selectedRows": [
+     "0",
+     "2",
+     "2.0",
+     "2.1"
+   ]
  }
      </code>
    </pre>
  </DocumentFragment>
`;

exports[`renders a table with selectable rows 4`] = `
Snapshot Diff:
- First value
+ Second value

@@ -213,11 +213,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Selected
+             Not Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -269,11 +269,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Selected
+             Not Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -325,11 +325,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Selected
+             Not Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -418,20 +418,17 @@
          </td>
        </tr>
      </tbody>
    </table>
    <p>
-     Selected Rows: 4
+     Selected Rows: 1
    </p>
    <pre>
      <code>
        {
    "selectedRows": [
-     "0",
-     "2",
-     "2.0",
-     "2.1"
+     "0"
    ]
  }
      </code>
    </pre>
  </DocumentFragment>
`;

exports[`renders a table with selectable rows 5`] = `
Snapshot Diff:
- First value
+ Second value

@@ -269,11 +269,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Not Selected
+             Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -418,17 +418,18 @@
          </td>
        </tr>
      </tbody>
    </table>
    <p>
-     Selected Rows: 1
+     Selected Rows: 2
    </p>
    <pre>
      <code>
        {
    "selectedRows": [
-     "0"
+     "0",
+     "2.0"
    ]
  }
      </code>
    </pre>
  </DocumentFragment>
`;

exports[`renders a table with selectable rows 6`] = `
Snapshot Diff:
- First value
+ Second value

@@ -213,11 +213,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Not Selected
+             Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -325,11 +325,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Not Selected
+             Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -418,18 +418,20 @@
          </td>
        </tr>
      </tbody>
    </table>
    <p>
-     Selected Rows: 2
+     Selected Rows: 4
    </p>
    <pre>
      <code>
        {
    "selectedRows": [
      "0",
-     "2.0"
+     "2.0",
+     "2.1",
+     "2"
    ]
  }
      </code>
    </pre>
  </DocumentFragment>
`;

exports[`renders a table with selectable rows 7`] = `
Snapshot Diff:
- First value
+ Second value

@@ -213,11 +213,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Selected
+             Not Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -325,11 +325,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Selected
+             Not Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -418,20 +418,18 @@
          </td>
        </tr>
      </tbody>
    </table>
    <p>
-     Selected Rows: 4
+     Selected Rows: 2
    </p>
    <pre>
      <code>
        {
    "selectedRows": [
      "0",
-     "2.0",
-     "2.1",
-     "2"
+     "2.0"
    ]
  }
      </code>
    </pre>
  </DocumentFragment>
`;
